--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ ol {
 .toolkit-grid {
     padding: 30px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-template-rows: auto;
     grid-gap: 20px;
     text-align: center;
